--- a/music/views/index.ejs
+++ b/music/views/index.ejs
@@ -7,6 +7,9 @@
   <body>
   	<header>
   		<h1><%= title %></h1>
+      <p>
+        Volumne <input id="volume" type="range" min="0" max="100" value="60" />
+      </p>
   	</header>
   	<div class="left">
   		<ul id="list">
